2009-XXXXX version 2.9.0
  * Support instances appearing in more than one application by allowing
    a semicolon separated list of names for the newrelic.yml app_name setting.
  * Added mongrel_rpm to the gem, a standalone daemon listening for 
    custom metric values sent from local processes.  Experimental.
  * Added some sorting options for the transaction list in Developer Mode
  * Improved labeling of metrics in Dev Mode traces to make them more readable
  * Give visibility to templates and partials in Rails 2.1 and later, in dev
    mode and production
  * Support concurrency when determining busy times, for 2.3 compatibility
  * Capture gem information in configuration
  * Using a different timeout mechanism when we post data to RPM
  * Add API for system monitoring daemons
  * Sample memory on linux by reading /proc/#{$$}/status file
  * changed API for manual starting of the agent; refer to
    NewRelic::Agent.manual_start for details
  * refactored to simplify startup sequence
  * add instrumentation to capture metrics on response codes
  * reduced the number of controller metrics that report to rpm
  * use rpm server time for transaction traces rather than agent time
  * added http referer to traced errors
  * on connection, get a shard collector to redirect to
  * removed Numeric extensions, including round_to, and to_ms
  * combined agent logfiles into a single logfile
  * in jruby, use Java used heap for memory sampling if the system
    memory is not accessible from an unsupported platform
  * fix various bugs with jruby support
2009-04-17 version 2.8.9
  * fix problem finding the newrelic controller in dev mode
  * fix incompatibility with older versions of optparse
  * fix potential jvm problem with jruby
  * remove test:all task definition to avoid conflicts
  * change error message about window sampler in windows not supported
    to a warning message
2009-03-30 version 2.8.8
  * fix error with jruby on windows