@@ -12,6 +12,7 @@ OptionParser.new do |opts|
   opts.on("-p", "--port=port", Integer, "default: #{port}") { | port | }
   opts.on("--[no-]logging", "turn off request logging" ) { | l | options[:logging] = l }
   opts.on("--license=rpm_license_key", "override license key" ) { | l | options[:license_key] = l }
+  opts.on("--install", "install a newrelic.yml template" ) { | l | options[:install] = true }
   opts.separator ""
   opts.separator "app_name is the name of the application where the metrics will be stored"
   opts.separator ""
@@ -27,6 +28,6 @@ builder = Rack::Builder.new { eval rackup_code, binding, ru_file }
 
 options = { :Host => '127.0.0.1', :Port => port }
 Rack::Handler::Mongrel.run(builder.to_app, options) do | server |
-   NewRelic::Control.instance.log! "Started Mongrel listening for '#{NewRelic::Control.instance.app_names.join(" and "}' data at #{server.host}:#{server.port}" 
+   NewRelic::Control.instance.log! "Started Mongrel listening for '#{NewRelic::Control.instance.app_names.join(" and ")}' data at #{server.host}:#{server.port}" 
 end
 
