@@ -18,6 +18,9 @@ class NewRelic::Control::Ruby < NewRelic::Control
     end
     return File.expand_path(files.first)
   end
+  def to_stdout(msg)
+    STDOUT.puts msg
+  end
   
   def init_config(options={})
   end
