@@ -148,9 +148,6 @@ module NewRelic
     end
 
     def check_for_webrick
-      return
-      # This next line is too aggressive.  Apps not using webrick
-      # sometimes ended up with this constant defined anyway
       return unless defined?(WEBrick::VERSION)
       @dispatcher = :webrick
       if defined?(OPTIONS) && OPTIONS.respond_to?(:fetch) 
