@@ -1,0 +1,25 @@
+#
+# This file configures the Rack NewRelic Metric Application.  Place a copy of this file
+# in the directory where you start the mongrel_rpm process.
+#
+common: &default_settings
+  log_level: info
+  
+  # This is the key generated by script/create_admin
+  license_key: 'your_license_key_here'
+  
+  # Replace this with the name of the application feeding
+  # metrics into the Metric application;
+  app_name: Application Monitor
+    
+# If RAILS_ENV or RUBY_ENV is defined to be one of the following
+# these values will be overrides
+
+production:
+  <<: *default_settings
+  app_name: Production Monitor
+  
+staging:
+  <<: *default_settings
+  app_name: Staging Monitor
+
